# chancleta

./: README.md  TEST  TODO  chancleta.json  chancleta.toml  chancleta.xml  chancleta.yaml  parser.py  pyproject.toml
chancleta/: __init__.py  __main__.py  parser.py
chancleta/config/: chancleta.json  chancleta.toml  chancleta.xml  chancleta.yaml
chancleta/util/: commands.py
examples/: README.md  pyproject.toml
examples/testoo/: __main__.py
examples/testoo/config/: chancleta.json  chancleta.toml  chancleta.xml  chancleta.yaml
examples/testoo/util/: __init__.py
util/: __init__.py  commands.py
