[tool.poetry]
name = "chancleta"
version = "0.1.2"
description = ""
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
xmltodict = "^0.13.0"
twine = "^5.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
