[tool.poetry]
name = "chancleta"
version = "0.1.5"
description = "Python library for creating Command Line Interfaces via configuration files. Supports .toml, .json, .yaml and .xml (for the bold ones)"
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
