[tool.poetry]
name = "chancleta"
version = "1.0.1"
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
description = "Python library for creating Command Line Interfaces via configuration files. Supports .toml, .json, .yaml and .xml (for the brave ones)"
keywords = ["command line interface", "cli starter kit", "toml", "json", "yaml", "xml"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.urls]
repository = "https://github.com/kaliv0/chancleta.git"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
